# Client-Server-app-in-C-

./: .gitignore  CMakeLists.txt  README.md
code/: main.cpp  winsock.cpp  winsock.h
